{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 666,
  "lineage": "9df14106-c7e2-be43-b7db-ea8e1a3846ea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "e-learning-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09de1733d19e1ad13",
            "domain": "vpc",
            "id": "eipalloc-09de1733d19e1ad13",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-35-177-226-145.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.226.145",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "e-learning-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:internet-gateway/igw-04b1a885c498d880a",
            "id": "igw-04b1a885c498d880a",
            "owner_id": "492367642859",
            "tags": {
              "Name": "e-learning-igw-prod"
            },
            "tags_all": {
              "Name": "e-learning-igw-prod"
            },
            "vpc_id": "vpc-0fc1caf184b7dde5f"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "e-learning-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/528191a618996df8",
            "arn_suffix": "app/e-learning-alb/528191a618996df8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "e-learning-alb-965241148.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/528191a618996df8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "e-learning-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ffaaafea8fbd95f8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-098b176de4c145860"
              },
              {
                "subnet_id": "subnet-0b1d3dc5b6d046ac8"
              }
            ],
            "subnets": [
              "subnet-098b176de4c145860",
              "subnet-0b1d3dc5b6d046ac8"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0fc1caf184b7dde5f",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.e-learning-alb-sg",
            "aws_subnet.e-learning-pub-sub1",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "e-learning-alb-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/528191a618996df8/9bc6d84a75afa2b3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/528191a618996df8/9bc6d84a75afa2b3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/528191a618996df8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.e-learning-alb",
            "aws_security_group.e-learning-alb-sg",
            "aws_subnet.e-learning-pub-sub1",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "e-learning-alb-https-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/528191a618996df8/2117a018441fa279",
            "certificate_arn": "arn:aws:acm:eu-west-2:492367642859:certificate/4c707b41-b721-47ed-a39b-8aaa83782a91",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/e-learning-alb-tg/651b1f7a10329d3c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/528191a618996df8/2117a018441fa279",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/528191a618996df8",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.ecs-acm-cert",
            "aws_lb.e-learning-alb",
            "aws_lb_target_group.e-learning-alb-tg",
            "aws_security_group.e-learning-alb-sg",
            "aws_subnet.e-learning-pub-sub1",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "e-learning-alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/e-learning-alb-tg/651b1f7a10329d3c",
            "arn_suffix": "targetgroup/e-learning-alb-tg/651b1f7a10329d3c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/e-learning-alb-tg/651b1f7a10329d3c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "e-learning-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0fc1caf184b7dde5f"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "e-learning-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09de1733d19e1ad13",
            "connectivity_type": "public",
            "id": "nat-039c60ef0d7038956",
            "network_interface_id": "eni-00d8f7f4cd7f17bde",
            "private_ip": "10.0.9.24",
            "public_ip": "35.177.226.145",
            "subnet_id": "subnet-0b1d3dc5b6d046ac8",
            "tags": {
              "Name": "gw NAT-prod"
            },
            "tags_all": {
              "Name": "gw NAT-prod"
            }
          },
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "e-learning-priv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:route-table/rtb-03cd00f4ac819f0d8",
            "id": "rtb-03cd00f4ac819f0d8",
            "owner_id": "492367642859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-039c60ef0d7038956",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "e-learning-priv-rt-prod"
            },
            "tags_all": {
              "Name": "e-learning-priv-rt-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc1caf184b7dde5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_nat_gateway.e-learning-ngw",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "e-learning-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:route-table/rtb-0d49b30ae4c7ab254",
            "id": "rtb-0d49b30ae4c7ab254",
            "owner_id": "492367642859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04b1a885c498d880a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "e-learning-pub-route-prod"
            },
            "tags_all": {
              "Name": "e-learning-pub-route-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc1caf184b7dde5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.e-learning-igw",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-priv1-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053cb1a4805488d16",
            "route_table_id": "rtb-03cd00f4ac819f0d8",
            "subnet_id": "subnet-0295077790feaaf43"
          },
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_nat_gateway.e-learning-ngw",
            "aws_route_table.e-learning-priv-rt",
            "aws_subnet.e-learning-priv-sub1",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-priv2-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000119052af1c2af6",
            "route_table_id": "rtb-03cd00f4ac819f0d8",
            "subnet_id": "subnet-03c2eba947a30709f"
          },
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_nat_gateway.e-learning-ngw",
            "aws_route_table.e-learning-priv-rt",
            "aws_subnet.e-learning-priv-sub2",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-pub1-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028b6dca3ed1919df",
            "route_table_id": "rtb-0d49b30ae4c7ab254",
            "subnet_id": "subnet-0b1d3dc5b6d046ac8"
          },
          "dependencies": [
            "aws_internet_gateway.e-learning-igw",
            "aws_route_table.e-learning-pub-rt",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-pub2-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00991da8b48bc514e",
            "route_table_id": "rtb-0d49b30ae4c7ab254",
            "subnet_id": "subnet-098b176de4c145860"
          },
          "dependencies": [
            "aws_internet_gateway.e-learning-igw",
            "aws_route_table.e-learning-pub-rt",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "e-learning-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-0ffaaafea8fbd95f8",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffaaafea8fbd95f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls_http",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls_http-prod"
            },
            "tags_all": {
              "Name": "allow_tls_http-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc1caf184b7dde5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "e-learning-ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-02452b15dd59c9489",
            "description": "Allow TCP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02452b15dd59c9489",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TCP from alb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ffaaafea8fbd95f8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "e-learning-ecs-sg",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "e-learning-ecs-sg-prod"
            },
            "tags_all": {
              "Name": "e-learning-ecs-sg-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc1caf184b7dde5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.e-learning-alb-sg",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgresql-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-09520a7ba9aa06460",
            "description": "Allows traffic only on port 5432 with ecs cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09520a7ba9aa06460",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ecs security group to db",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02452b15dd59c9489"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgresql-rds-sg",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-instance-sec-group-prod"
            },
            "tags_all": {
              "Name": "db-instance-sec-group-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc1caf184b7dde5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.e-learning-alb-sg",
            "aws_security_group.e-learning-ecs-sg",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-priv-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-0295077790feaaf43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0295077790feaaf43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-priv-sub1-prod"
            },
            "tags_all": {
              "Name": "e-learning-priv-sub1-prod"
            },
            "vpc_id": "vpc-0fc1caf184b7dde5f"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-priv-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-03c2eba947a30709f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c2eba947a30709f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-priv-sub2-prod"
            },
            "tags_all": {
              "Name": "e-learning-priv-sub2-prod"
            },
            "vpc_id": "vpc-0fc1caf184b7dde5f"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-0b1d3dc5b6d046ac8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1d3dc5b6d046ac8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-pub-sub1-prod"
            },
            "tags_all": {
              "Name": "e-learning-pub-sub1-prod"
            },
            "vpc_id": "vpc-0fc1caf184b7dde5f"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-pub-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-098b176de4c145860",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098b176de4c145860",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-pub-sub2-prod"
            },
            "tags_all": {
              "Name": "e-learning-pub-sub2-prod"
            },
            "vpc_id": "vpc-0fc1caf184b7dde5f"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "e-learning",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:vpc/vpc-0fc1caf184b7dde5f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c0005b8dab05e80",
            "default_route_table_id": "rtb-008ab863089d8b3b8",
            "default_security_group_id": "sg-081b0026770bb37db",
            "dhcp_options_id": "dopt-07de7887fa266f1ce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc1caf184b7dde5f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-008ab863089d8b3b8",
            "owner_id": "492367642859",
            "tags": {
              "Name": "e-learning-prod"
            },
            "tags_all": {
              "Name": "e-learning-prod"
            }
          }
        }
      ]
    }
  ]
}